# oxide-poc

./: Cargo.toml  README.md  test.json
src/chain/: Cargo.toml
src/chain/src/: block.rs  chain.rs  lib.rs  utils.rs
src/miner/: Cargo.toml
src/miner/src/: lib.rs  pow.rs  utils.rs
src/node/: Cargo.toml
src/node/src/: lib.rs  peer.rs  server.rs
src/node/src/connection/: message.rs  mod.rs  socket.rs
src/p2p/: Cargo.toml
src/p2p/src/: connection.rs  lib.rs  payload.rs  server.rs
src/p2p/src/protocol/: peers.rs  pool.rs
src/wallet/: Cargo.toml
src/wallet/src/: account.rs  lib.rs  transaction.rs  transaction_pool.rs
